<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peakpx"
    tools:context=".MainPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="362dp"
        android:layout_height="682dp"
        android:background="@drawable/ui2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        tools:context=".MainPage">

        <TextView
            android:id="@+id/button1"
            android:layout_width="193dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/butback"
            android:onClick="startGame"
            android:paddingTop="10dp"
            android:text="@string/single_player"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="205dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/butback"
            android:onClick="startGame"
            android:paddingTop="10dp"
            android:text="@string/multiplayer"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <TextView
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/signout"
            android:onClick="signOutApp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            tools:ignore="SpeakableTextPresentCheck" />

        <CheckBox
            android:id="@+id/begcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:buttonTint="#00ff00"
            android:onClick="setLevel"
            android:text="@string/beginner"
            android:textColor="#00ff00"
            android:textSize="20sp"
            app:checkedState="checked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:ignore="TextContrastCheck" />

        <CheckBox
            android:id="@+id/hardcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="#00ffff"
            android:onClick="setLevel"
            android:text="@string/hard"
            android:textColor="#00ffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/begcheck"
            tools:ignore="TextContrastCheck" />

        <CheckBox
            android:id="@+id/expcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="#ff0000"
            android:onClick="setLevel"
            android:text="@string/expert"
            android:textColor="#ff0000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hardcheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/musicsw"
            android:layout_width="155dp"
            android:layout_height="64dp"
            android:layout_marginTop="50dp"
            android:minHeight="48dp"
            android:text="@string/music"
            android:textColor="#1DE9B6"
            android:textColorLink="#ffffff"
            android:textSize="28sp"
            android:thumb="@drawable/thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expcheck"
            app:track="@drawable/track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>