<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peakpx"
    tools:context=".AuthPage">

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="682dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/ui"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:outlineAmbientShadowColor="#00FFFFFF"
            android:outlineSpotShadowColor="#00510101"
            app:cardBackgroundColor="#008800FF"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login2"
                android:textAlignment="center"
                android:textColor="#00ffff"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardx3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#ffffff"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="viewStart"
                android:textColorHint="#78909C"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:backgroundTint="#ffffff"
                android:ems="10"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="viewStart"
                android:textColorHint="#78909C"
                android:textStyle="bold"
                app:layout_column="1"
                app:layout_row="0" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardx0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#ffffff"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="viewStart"
                android:textColorHint="#78909C"
                android:textStyle="bold"
                app:layout_column="1"
                app:layout_row="1" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendbut"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00ffff"
                android:onClick="loginClicked"
                android:text="@string/login"
                android:textColor="#ff00ff"
                app:layout_column="0"
                app:layout_row="2"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signup"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:backgroundTint="#00ffff"
                android:onClick="signUpClicked"
                android:text="@string/sign_up"
                android:textColor="#C51162"
                app:layout_column="2"
                app:layout_row="2" />
        </LinearLayout>

        <Button
            android:id="@+id/forgotbut"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:onClick="forgotClicked"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/did_you_forget_your_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="3"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>